[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Theme/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Scripts/Main Menu.gd" type="Script" id=2]

[node name="Main Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 15.0
margin_right = 500.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 470.0
margin_bottom = 39.0
theme = ExtResource( 1 )
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 470.0
margin_bottom = 82.0
theme = ExtResource( 1 )
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 470.0
margin_bottom = 125.0
theme = ExtResource( 1 )
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
